@@ -7,6 +7,8 @@ CHANGES IN FLa4a 0.700.x:
 	BUG FIXES:
 		sr geomean fixed, it was failing due to including par "b" in outcome while admb was not reporting.
 		R~ssb was using the previous year to compute SSB, now it matches the SSB with the correct yearclass.
+		Biomass age ranges for fitting biomass indices was not computed properly, was using position instead of real ages.
+		MCMC with hybrid method was not working due to mcsave wrongly set, must be 1.
 
 CHANGES IN FLa4a 0.600.x:
 
